redis cache added

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@ DOMAIN=
 JWT_SECRET_KEY=
 ACCESS_TOKEN_EXPIRES_IN=
 REFRESH_TOKEN_EXPIRES_IN=
+
+REDIS_HOST=
+REDIS_PORT=
+REDIS_PASSWORD=
+REDIS_CACHE_TTL=
